<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/test"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=" \n\n\n\n\n\n" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:divider="@color/divider"
            android:dividerHeight="12dp"
            android:scrollbars="vertical"
            tools:listitem="@layout/item_main_listview"
            tools:visibility="gone" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ImageView
        android:id="@+id/emptyIdImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/emptyId"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_add_help" />

    <TextView
        android:id="@+id/emptyId"
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/also_empty"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        app:layout_behavior="ru.csu.ttpapp.common.desing.ScrollAwareFABBehavior"
        app:srcCompat="@drawable/ic_add" />
</RelativeLayout>