<resources>
    <string name="app_name">MAFic: Updates</string>

    <!-- Быстрые настройки и создание задачи -->
    <string name="setting_row">Create task</string>
    <string name="set_name">Your title (optional)</string>
    <string name="set_link">Link of creation*</string>

    <!-- Редактирование задачи -->
    <string name="set_new_name">New title</string>
    <string name="edit_task_title">Edit</string>
    <string name="edit_not_empty">Can\'t be empty</string>

    <!-- Основные кнопки -->
    <string name="done">OK</string>
    <string name="cancel">CANCEL</string>

    <!-- Меню -->
    <string name="about_app">About</string>
    <string name="setting_app">Setting</string>
    <string name="about_description">Check for updates from your favorite authors without opening a browser.</string>
    <string name="supported_sites">Supported sites:</string>
    <string name="wishes_or_problems">Wishes or problems?</string>
    <string name="write_to_telegram">Write to Telegram:</string>

    <!-- Задача -->
    <string name="last_check">Last update: </string>
    <string name="title_activity_settings">Settings</string>
    <string name="link_empty_error">Link entered incorrectly or was not entered. Task is not save</string>
    <string name="text_conf_delete">Are you sure you want to delete the task?</string>

    <!-- Состояния задачи -->
    <string name="update_not">Update is not. Try again later</string>
    <string name="update_exist">There is an update! Сlick on title to view</string>
    <string name="site_rip">"This server is not available: "</string>

    <!-- Загрузка -->
    <string name="loading">Loading... Wait, please</string>

    <!-- Настройки вида -->
    <string name="appearance_header">Appearance</string>
    <string name="signature_title">Your signature</string>
    <string name="theme_title">Theme</string>
    <string name="theme_summary">App theme selection</string>

    <!-- Прочие настройки -->
    <string name="other_settings">Other settings</string>
    <string name="lang_title">Language</string>
    <string name="lang_summary">You must restart the application to accept the changes.</string>
    <string name="check_internet">Check your internet connection...</string>
    <string name="help_long_click">Long click to go to browser!</string>
    <string name="help_subtitle">You may not have known!</string>
    <string name="helper_title">Helper</string>
    <string name="title_notify">News for you</string>
    <string name="after_rating">After</string>
    <string name="text_rating">Can you rate this app? :)</string>
    <string name="rate_the_app">Rate us</string>
    <string name="also_empty">Add task :)</string>
    <string name="text_error_link">Link must be start with https://</string>
    <string name="helper_create_text">Input link to your favorite work</string>
    <string name="last_updated_all_text">Last updated:</string>
    <string name="fail_save">Failed to get data from the site.</string>
    <string name="remove_task_title">Remove</string>
    <string name="update_task_title">Update</string>
    <string name="copy_link_title">Copy link</string>
    <string name="link_copied">Text copied</string>
    <string name="title_activity_view">View</string>
    <string name="clean_cache_btn">Click to clean cache</string>
    <string name="cache_cleaned">Cache cleaned</string>
    <string name="share_title">Share</string>
    <string name="or">or</string>
    <string name="help_click">Click on the title to open the page in the app.</string>
    <string name="to_move">To move</string>
    <string name="move_text1">Move here what</string>
    <string name="move_text2">you want to watch later !</string>
    <string name="version_title">Version</string>
    <string name="share_app_summary">Tell about MAFic to your friends</string>
    <string name="share_app_recommend">"Download from Google Play: "</string>
    <string name="more_setting">More</string>
    <string name="rate_app_summary">Rate MAFic to make us better</string>
    <string name="license_title">Open Source Licenses</string>
    <string name="question_about_view">How to enter view mode?</string>
    <string name="question_about_date_chapter">Why is my site listed, but the date and last chapter are not displayed?</string>
    <string name="answer_about_date_chapter">Try adding or removing \'m.\' at the beginning of your site URL. Or try adding or removing \'/\' at the end of the link. If the error persists, please let me know which sites have the problem.</string>
    <string name="faq_title">FAQ</string>
    <string name="question_about_support_sites">What sites are supported by the application?</string>
    <string name="answer_about_support_sites">The application supports the following sites: fanfox.net, soundcloud.com, archiveofourown.org, mintmanga.live, readmanga.live, findanime.net, mangahub.ru, hdseria.tv, sovetromantica.com, ficbook.net.</string>
    <string name="question_about_tab_bookmark">Why can\'t I update the list in the \'Postponed\' tab?</string>

    <string name="question_update_next_step">I tried everything suggested above but nothing changed. What\'s next?</string>
    <string name="answer_update_next_step">ЧOpen a bookmark in your browser and check the availability of the site.</string>

    <string name="anwer_about_tab_bookmarks">In the \'Postponed\' tab, you can postpone the updated bookmark to remember and watch the update later.</string>
    <string name="question_about_move_bookmark">How do I delete a bookmark or move it to another section?</string>
    <string name="answer_about_move_bookmark">To move a bookmark to another tab, drag it to the right.</string>
    <string name="info_title">Information</string>
    <string name="in_process_notify">In the process of parsing the page. You can continue to work</string>
    <string name="home">Home</string>
    <string name="postponed">Postponed</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="instructions">Add links to a page that lists all parts of the work.\n\nFor example, for the Archive of Out Own site:\nhttps://archiveofourown.org/works/{numbers}/\nhttps://archiveofourown.org/works/32289190/\n\nFor the fanfox.net site:\nhttps://fanfox.net/manga/{title_of_manga}/\nhttps://fanfox.net/manga/onepunch_man/\n</string>
    <string name="got_it">GOT IT</string>
    <string name="help_row">Hold a bookmark and Drag to the ← to delete or ☆move☆ it or open it in the browser.\nClick on the title to open the bookmark in the app.</string>
    <string name="help_add_row">To get started, add a link to the page with all the chapters where you read manga, fanfic or watch anime.</string>
    <string name="help_all_update">Drag ↓ to refresh all bookmarks.</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="use_browser">(・人・)\n\nIn case of problems,\nuse a browser.</string>
    <string name="send_mail">Write to developer</string>
    <string name="email" translatable="false">armodoner@gmail.com</string>
</resources>
