...
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
...

                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/nameLink"
                            style="@style/TextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_start"
                            android:ellipsize="end"
                            android:maxLines="1"
...
